<resources>
    <string name="app_name">FinControl</string>

    <string name="no_transactions">No transactions</string>
    <string name="show_summary">Show summary</string>
    <string name="summary">Summary</string>
    <string name="show_payment_methods">Show payment methods</string>
    <string name="add_new_payment_method">Add new payment method</string>
    <string name="default_method">Default method</string>
    <string name="payment_methods">Payment methods</string>
    <string name="method_name">Method name</string>
    <string name="balance">Balance</string>
    <string name="set_as_default_payment_method">Set as default payment method</string>
    <string name="currency">Currency</string>
    <string name="sum">Sum</string>
    <string name="place">Place</string>
    <string name="from">From</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="use_current_time">Use current time</string>
    <string name="use_original_time">Use original time</string>
    <string name="add_to_list">Add to list</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="no_archived_transactions">No archived transactions</string>
    <string name="unarchive">Unarchive</string>
    <string name="archived_transactions">Archived transactions</string>
    <string name="category">Category</string>
    <string name="places">Places</string>
    <string name="categories">Categories</string>
    <string name="currencies">Currencies</string>
    <string name="transactions">Transactions</string>
    <string name="no_categories">No categories</string>
    <string name="no_places">No places</string>
    <string name="no_currencies">No currencies</string>
    <string name="set_as_default">Set as default</string>
    <string name="add_transaction">Add transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="archive_disclaimer">Archived transactions automatically removed after 10 days</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="total">Total</string>
</resources>
