<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactions.AddTransactionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_transaction_type_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_charge_off"
                    android:layout_gravity="center"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_transaction_sum_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/sum"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_transaction_sum_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_transaction_currency_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/currency"
                    app:boxBackgroundColor="@color/colorWhite">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/add_transaction_currency_text_view"
                        android:layout_width="130dp"
                        android:inputType="textCapCharacters"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_transaction_place_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/place"
                    app:boxBackgroundColor="@color/colorWhite">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/add_transaction_place_text_view"
                        android:layout_width="match_parent"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/add_transaction_add_place_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/add_to_list"
                    android:textColor="@color/colorBlue"
                    android:textSize="17sp"
                    android:visibility="gone" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/add_transaction_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/add_transaction_payment_method_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp" />

            <CheckBox
                android:id="@+id/add_transaction_current_time_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/use_current_time"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/add_transaction_date_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_transaction_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="15dp"
                    android:layout_weight="1"
                    android:insetRight="15dp"
                    android:text="@string/date" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_transaction_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cornerRadius="15dp"
                    android:insetLeft="15dp"
                    android:text="@string/time" />

            </LinearLayout>

            <EditText
                android:id="@+id/add_transaction_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/transaction_note_background"
                android:hint="@string/description"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>