<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".summary.SimpleSummaryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_scrollable" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/simple_summary_start_period_button"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/start_date"
                app:layout_constraintRight_toLeftOf="@id/arrow_image_view"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageView
                android:id="@+id/arrow_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="22dp"
                app:layout_constraintLeft_toRightOf="@id/simple_summary_start_period_button"
                app:layout_constraintRight_toLeftOf="@id/simple_summary_end_period_button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/simple_summary_end_period_button"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/end_date"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/arrow_image_view"
                app:layout_constraintRight_toRightOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/simple_summary_data_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/simple_summary_start_period_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone">

                <TextView
                    android:id="@+id/total_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/simple_summary_total_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="10dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:textSize="21sp"
                    app:layout_constraintTop_toBottomOf="@id/total_text_view"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/simple_summary_period_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/simple_summary_total_text_view" />

                <TextView
                    android:id="@+id/trans_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transactions"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/simple_summary_period_text_view"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/trans_text_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>